[gd_scene load_steps=2 format=3 uid="uid://dua0lhleehfxt"]

[ext_resource type="Script" uid="uid://d1w82i23q04sb" path="res://scripts/attack.gd" id="1_nursx"]

[node name="Attack" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_nursx")

[node name="OpenButton" type="Button" parent="."]
layout_mode = 2
offset_left = 1770.0
offset_right = 1920.0
offset_bottom = 50.0
text = "Attack"

[node name="AttackPanel" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 11
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -300.0
grow_horizontal = 0
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="AttackPanel"]
layout_mode = 2
theme_override_constants/separation = 3

[node name="Label" type="Label" parent="AttackPanel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 0
theme_override_font_sizes/font_size = 65
text = "Attack"
horizontal_alignment = 1
vertical_alignment = 1

[node name="MarginContainer" type="MarginContainer" parent="AttackPanel/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="EnemyList" type="GridContainer" parent="AttackPanel/VBoxContainer/MarginContainer"]
custom_minimum_size = Vector2(150, 100)
layout_mode = 2
size_flags_vertical = 0
theme_override_constants/h_separation = 10
theme_override_constants/v_separation = 20
columns = 2

[node name="MarginContainer2" type="MarginContainer" parent="AttackPanel/VBoxContainer"]
self_modulate = Color(1, 1, 1, 0)
layout_mode = 2
theme_override_constants/margin_left = 100
theme_override_constants/margin_right = 100

[node name="CloseButton" type="Button" parent="AttackPanel/VBoxContainer/MarginContainer2"]
layout_mode = 2
size_flags_vertical = 8
text = "Close"
